<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#026906"
    android:paddingStart="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/header"
        android:textSize="30sp"
        android:layout_margin="6dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/imgViewId"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/currency"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/inputId"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="250dp"
        android:ems="5"
        android:hint="@string/edtx"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/usdText"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="305dp"
        android:text="@string/usd"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/takaText"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="335dp"
        android:text="@string/taka"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dinarText"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="365dp"
        android:text="@string/dinar"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/poundText"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="395dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:text="@string/pound"
         />

    <TextView
        android:id="@+id/euroText"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="425dp"
        android:text="@string/euro"
        android:textSize="20sp"
        android:textColor="#FFFFFF"

    />

    <Spinner
        android:id="@+id/spinnerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="180dp"
        android:layout_marginStart="180dp"
        android:paddingLeft="5dp"/>
    <CheckBox
        android:id="@+id/usdCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/usd"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <CheckBox
        android:id="@+id/takaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/taka"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/dinarCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/dinar"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/poundCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:text="@string/pound"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/euroCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/euro"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <Button
        android:layout_width="180dp"
        android:id="@+id/btnId"
        android:layout_marginLeft="80dp"
        android:text="@string/btn"
        android:background="#FFEB3B"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:layout_marginStart="80dp" />


</RelativeLayout>